Migrate JUnit 4 to JUnit 5